--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,5 @@
 @import "navigation.css";
 @import "site-title.css";
 @import "blog-carousel.css";
+@import "site-content.css";
+@import "footer.css";
