--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,16 @@
 @import url("fonts.css");
+html {
+  font-size: 16px;
+}
+
 * {
-  margin: 0;
-  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -45,7 +52,7 @@ span {
 }
 
 .container {
-  margin: 0 5vw;
+  margin: 0 4vw;
 }
 
 :root {
