--- a/css/global.scss
+++ b/css/global.scss
@@ -1,12 +1,17 @@
 @import url('fonts.css');
 
+html {
+    font-size: 16px;
+}
+
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
-body {}
+body {
+    margin: 0;
+    padding: 0;
+}
 
 a {
     text-decoration: none;
@@ -47,7 +52,7 @@ span {
 }
 
 .container {
-    margin : 0 5vw;
+    margin: 0 4vw;
 }
 
 :root {
