--- a/css/blog-carousel.scss
+++ b/css/blog-carousel.scss
@@ -58,3 +58,17 @@ main .blog {
     background: transparent;
     color: var(--text-blue);
 }
+
+@media only screen and (max-width: 1130px) {}
+
+@media only screen and (max-width: 960px) {}
+
+@media only screen and (max-width: 768px) {
+    main .blog {
+        background-size: 90%;
+    }
+}
+
+@media only screen and (max-width: 600px) {}
+
+@media only screen and (max-width: 480px) {}
