--- a/css/site-content.css
+++ b/css/site-content.css
@@ -5,7 +5,8 @@
       grid-template-columns: 70% 30%;
 }
 
-.sidebar, .posts {
+.sidebar,
+.posts {
   padding: 0 .5rem;
 }
 
@@ -172,15 +173,15 @@
   font-size: 1rem;
 }
 
-.newsletter {
+main .newsletter {
   padding-top: 2rem;
 }
 
-.newsletter .form-element {
+main .newsletter .form-element {
   padding: .5rem 2rem;
 }
 
-.newsletter .form-element .input-element {
+main .newsletter .form-element .input-element {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
@@ -190,7 +191,7 @@
   font-size: 1rem;
 }
 
-.newsletter .form-element .form-btn {
+main .newsletter .form-element .form-btn {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
@@ -220,5 +221,38 @@
   padding: .5rem 1rem;
   border-radius: 3rem;
   margin: .4rem .6rem;
+}
+
+@media only screen and (max-width: 1130px) {
+  .container {
+    margin: 0 1vw;
+  }
+  .category ul li {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .post-content .post-image,
+  .post-content .post-title {
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .site-content {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .category ul li {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .post-content .post-image .post-info {
+    padding: .2rem .5rem;
+    display: block;
+  }
 }
 /*# sourceMappingURL=site-content.css.map */
