--- a/css/navigation.scss
+++ b/css/navigation.scss
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-around;
     /* width: 30%; */
+    z-index: 1;
 }
 
 .nav-items a {
@@ -42,6 +43,7 @@ nav {
     width: 20%;
     display: inline-flex;
     justify-content: center;
+    z-index: 1;
 }
 
 .nav-social-icons a i {
